[tool.poetry]
name = "universe_iterator"
version = "0.1.0"
description = "Creates every possible black and white image"
authors = ["Maurycy Blaszczak <mgblaszczak@gmail.com>"]
license = "GPL-3.0"

[tool.poetry.dependencies]
python = "^3.9"
click = "^7.1.2"
numpy = "^1.20.1"
Pillow = "^8.1.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
